# rive-cpp

./: CMakeLists.txt
include/rive/: artboard.hpp
src/: CMakeLists.txt  artboard.cpp
